# atlas

./: .gitignore  README.md  config.py  gh_items.txt  main.py  pyproject.toml  run.sh  test.py
.k8s/bases/: config-map.yaml  deployment-mlapi.yaml  deployment-postgres.yaml  deployment-redis.yaml  kustomization.yaml  persistent-volume.yaml  postgres-config.yaml  postgres-pv-pvc.yaml  service-mlapi.yaml  service-postgres.yaml  service-redis.yaml
.k8s/overlays/dev/: kustomization.yaml  namespace.yaml  patch-deployment-mlapi.yaml
.k8s/overlays/prod/: kustomization.yaml  patch-deployment-mlapi.yaml  virtual-service.yaml
mlapi/: Dockerfile  pyproject.toml
mlapi/src/: main.py
mlapi/src/internal/: __init__.py
mlapi/src/models/: __init__.py  vc_models.py
mlapi/src/routers/: __init__.py  profile.py  radar.py  symbio.py
mlapi/tests/: test_mlapi.py
models/: vc_models.py
routers/: profile.py  radar.py  symbio.py
